* Fixes #3907: Undefined wide MenuBar will drop items that do not fit in view  * Fixes #3908: MenuBar doesn't open sub-submenus with hover in IE7
svn changeset:10538/svn branch:6.2

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -647,13 +647,15 @@ div.v-app-loading {
 
 .v-menubar {
 	float: left; /* Force minimum width */
-	overflow: hidden;
+	white-space: nowrap;
 }
 .v-menubar .v-menubar-menuitem {
 	cursor: default;
 	vertical-align: middle;
 	white-space: nowrap;
-	float: left;
+	display: inline;
+	display: inline-block;
+	zoom: 1;
 }
 .v-menubar .v-menubar-menuitem-caption * {
 	vertical-align: middle;
@@ -668,6 +670,7 @@ div.v-app-loading {
 }
 .v-menubar-submenu .v-menubar-menuitem { 
 	cursor: default;
+	display: block;
 	position: relative;
 	padding-right: 1.5em;
 }
